Sun Dec 22 14:14:37 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (dist): Don't update .po files automatically, since
	  they're kept under revision control.

Sun Dec 22 13:59:23 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fr.po,
	  po/it.po, po/ja.po, po/pt_BR.po, po/sv.po: Update with msgmerge.

Sun Dec 22 13:44:20 GMT 2002  Alexandre Folle de Menezes  <afmenez@terra.com.br>

	* po/pt_BR.po: Update from Translation Project.

Sat Dec 21 13:30:43 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (count_glob_matches): Exclude file names which
	  fail stat(), such as dangling symlinks.

Sat Dec 21 03:01:34 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (count_glob_matches): New function,
	  sanity-checking results from look_for_file(). This should probably
	  be done in look_for_file() itself eventually, but that requires
	  more widespread changes.
	  (purge_normal, purge_whatis): Use it.

	* src/check_mandirs.c (gripe_bogus_manpage, gripe_rwopen_failed,
	  filename_info, purge_normal, purge_whatis): Constify arguments.
	* src/check_mandirs.h (filename_info): Update prototype.

	* docs/NEWS: Document --enable-mandirs guesswork.
	* src/.cvsignore: Add the globbing test executable.

Fri Dec 20 15:38:48 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (main): Make the test program compile again, and
	  add full argument parsing.
	* src/Makefile.in (globbing): Link with util.o.

Fri Dec 20 15:34:51 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* configure.in: Guess the --enable-mandirs setting where possible if
	  it isn't specified explicitly.

Fri Dec 20 02:28:15 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (purge_missing): Match database entries
	  against real filenames using the name field where available, not
	  the lowercased field.

Fri Dec 20 02:15:21 GMT 2002  Colin Watson  <cjwatson@debian.org>
